--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -6,38 +6,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from configparser import ConfigParser, ExtendedInterpolation"
+    "# from configparser import ConfigParser, ExtendedInterpolation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import bart_v1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = ConfigParser(interpolation=ExtendedInterpolation(), allow_no_value=True)"
+    "# config = ConfigParser(interpolation=ExtendedInterpolation(), allow_no_value=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,36 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting the _ArchiveNavigator...\n",
-      "Opening browser...\n",
-      "Loading navigation page...\n",
-      "Scraping navigation page...\n",
-      "Parsing calendar...\n",
-      "Parsing day 1 of 1: 2019-08-03\n",
-      "Closing browser...\n"
-     ]
-    },
-    {
-     "ename": "NavigatorException",
-     "evalue": "If login=True, login credentials must be supplied.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNavigatorException\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-d954691b20a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marchive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/data_science/personal_projects/BArT/v1.0/bart_v1.py\u001b[0m in \u001b[0;36mbuild\u001b[0;34m(self, days_back, rebuild)\u001b[0m\n\u001b[1;32m    295\u001b[0m                                 \u001b[0musername\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0musername\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    296\u001b[0m                                 \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_password\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 297\u001b[0;31m                                 verbose=self._verbose)\n\u001b[0m\u001b[1;32m    298\u001b[0m         \u001b[0mcounter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    299\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/data_science/personal_projects/BArT/v1.0/bart_v1.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, login, username, password, verbose)\u001b[0m\n\u001b[1;32m    656\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0musername\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mpassword\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    657\u001b[0m                 raise NavigatorException(\n\u001b[0;32m--> 658\u001b[0;31m                         \"If login=True, login credentials must be supplied.\")\n\u001b[0m\u001b[1;32m    659\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    660\u001b[0m             \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mthrottle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNavigatorException\u001b[0m: If login=True, login credentials must be supplied."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "archive.build(0)"
    ]
