v1 commit 2 for 3 Aug 2019

--- a/bart_demo.ipynb
+++ b/bart_demo.ipynb
@@ -28,6 +28,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Set your username & password\n",
+    "USERNAME = \n",
+    "PASSWORD ="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Instantiate BArT\n",
     "archive = bart.BroadcastifyArchive(TEST_FEED_ID, USERNAME, PASSWORD)"
    ]
@@ -70,7 +81,10 @@
    "outputs": [],
    "source": [
     "# Change the feed_id\n",
-    "archive.feed_id = '763'\n",
+    "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
+    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA -- home precinct\n",
+    "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA -- GREAT SCOTT!\n",
+    "archive.feed_id = \n",
     "archive"
    ]
   },
