--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,17 @@
       "\tto ./testing/mp3_downloads/19807-20190803-0638.mp3\n",
       "Downloading 2 of 4\n",
       "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030438-629593-19807.mp3\n",
-      "\tto ./testing/mp3_downloads/19807-20190803-0608.mp3\n"
+      "\tto ./testing/mp3_downloads/19807-20190803-0608.mp3\n",
+      "Downloading 3 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030408-699690-19807.mp3\n",
+      "\tto ./testing/mp3_downloads/19807-20190803-0538.mp3\n",
+      "Downloading 4 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030338-869097-19807.mp3\n",
+      "\tto ./testing/mp3_downloads/19807-20190803-0508.mp3\n",
+      "\n",
+      "Downloads complete.\n",
+      "\n",
+      "Retrieved 4 files in 22.5865 seconds.\n"
      ]
     }
    ],
