v1 commit for 3 Aug 2019

--- a/bart_demo.ipynb
+++ b/bart_demo.ipynb
@@ -16,60 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Choose a feed to test, and uncomment it.\n",
     "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
-    "# TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
-    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
-    "TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# This field contains the username and password. Hide it.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "USERNAME = 'cwchiu'\n",
-    "PASSWORD = 'datascientists'"
+    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA -- home precinct\n",
+    "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA -- GREAT SCOTT!"
    ]
   },
   {
@@ -80,25 +30,6 @@
    "source": [
     "# Instantiate BArT\n",
     "archive = bart.BroadcastifyArchive(TEST_FEED_ID, USERNAME, PASSWORD)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# # Import pickle\n",
-    "\n",
-    "# import pickle\n",
-    "# with open('../data/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
-    "#     sample_archive_entries = pickle.load(pickle_in)\n",
-    "    \n",
-    "# archive.entries = sample_archive_entries"
    ]
   },
   {
@@ -128,6 +59,7 @@
    "outputs": [],
    "source": [
     "# Download the mp3s for 10p-2a\n",
+    "# Substitute in your dates with a datetime object: datetime(YYYY,M,D,H,M) (hour in 24-hr format)\n",
     "archive.download(start=datetime(2019,7,31,22,0), end=datetime(2019,8,1,2,0))"
    ]
   },
@@ -138,29 +70,8 @@
    "outputs": [],
    "source": [
     "# Change the feed_id\n",
-    "\n",
     "archive.feed_id = '763'\n",
     "archive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": [
-     0
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# # Export pickle\n",
-    "\n",
-    "# import pickle\n",
-    "\n",
-    "# sample_archive_entries = archive.entries\n",
-    "\n",
-    "# with open('../data/sample_archive_entries.pkl','wb') as pickle_out:\n",
-    "#     pickle.dump(sample_archive_entries, pickle_out)"
    ]
   },
   {
