--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from configparser import ConfigParser, ExtendedInterpolation"
+    "import bart_v1\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -15,7 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bart_v1"
+    "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
+    "# TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
+    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
+    "TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA"
    ]
   },
   {
@@ -24,32 +28,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# config = ConfigParser(interpolation=ExtendedInterpolation(), allow_no_value=True)"
+    "archive = bart_v1.BroadcastifyArchive(TEST_FEED_ID)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "archive = bart_v1.BroadcastifyArchive('18812')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BroadcastifyArchive\n",
+       " (0 ArchiveEntries\n",
+       "  start date: None\n",
+       "  end date:   None\n",
+       "  feed_id = 19807\n",
+       "  username = \"cwchiu\", pwd = [True]\n",
+       "  feed_url = \"https://www.broadcastify.com/listen/feed/19807\"\n",
+       "  archive_url = \"https://www.broadcastify.com/archives/feed/19807\"\n",
+       "  verbose = True)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "archive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive build complete.\n",
+      "BroadcastifyArchive\n",
+      " (41 ArchiveEntries\n",
+      "  start date: 2019-08-03 00:10:00\n",
+      "  end date:   2019-08-03 20:03:00\n",
+      "  feed_id = 19807\n",
+      "  username = \"cwchiu\", pwd = [True]\n",
+      "  feed_url = \"https://www.broadcastify.com/listen/feed/19807\"\n",
+      "  archive_url = \"https://www.broadcastify.com/archives/feed/19807\"\n",
+      "  verbose = True)\n"
+     ]
+    }
+   ],
    "source": [
     "archive.build(0)"
    ]
@@ -58,18 +89,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving list of ArchiveEntries...\n",
+      " no earlier than 2019-08-03 05:00:00\n",
+      " no later than   2019-08-03 07:00:00\n",
+      "\n",
+      "4 ArchiveEntries matched.\n",
+      "Downloading 1 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030508-259579-19807.mp3\n",
+      "\tto ./testing/mp3_downloads/19807-20190803-0638.mp3\n",
+      "Downloading 2 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030438-629593-19807.mp3\n",
+      "\tto ./testing/mp3_downloads/19807-20190803-0608.mp3\n"
+     ]
+    }
+   ],
    "source": [
-    "import sys"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path"
+    "archive.download(start=datetime(2019,8,3,5,0), end=datetime(2019,8,3,7,0))"
    ]
   },
   {
@@ -78,6 +118,73 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# # Import pickle\n",
+    "\n",
+    "# import pickle\n",
+    "# with open('../data/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
+    "#     sample_archive_entries = pickle.load(pickle_in)\n",
+    "    \n",
+    "# archive.entries = sample_archive_entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# # Export pickle\n",
+    "\n",
+    "# import pickle\n",
+    "\n",
+    "# sample_archive_entries = archive.entries\n",
+    "\n",
+    "# with open('../data/sample_archive_entries.pkl','wb') as pickle_out:\n",
+    "#     pickle.dump(sample_archive_entries, pickle_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
   }
  ],
  "metadata": {
