--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,91 +33,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BroadcastifyArchive\n",
-       " (0 ArchiveEntries\n",
-       "  start date: None\n",
-       "  end date:   None\n",
-       "  feed_id = 19807\n",
-       "  username = \"cwchiu\", pwd = [True]\n",
-       "  feed_url = \"https://www.broadcastify.com/listen/feed/19807\"\n",
-       "  archive_url = \"https://www.broadcastify.com/archives/feed/19807\"\n",
-       "  verbose = True)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "archive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archive build complete.\n",
-      "BroadcastifyArchive\n",
-      " (41 ArchiveEntries\n",
-      "  start date: 2019-08-03 00:10:00\n",
-      "  end date:   2019-08-03 20:03:00\n",
-      "  feed_id = 19807\n",
-      "  username = \"cwchiu\", pwd = [True]\n",
-      "  feed_url = \"https://www.broadcastify.com/listen/feed/19807\"\n",
-      "  archive_url = \"https://www.broadcastify.com/archives/feed/19807\"\n",
-      "  verbose = True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "archive.show_browser_ui = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "archive.build(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retrieving list of ArchiveEntries...\n",
-      " no earlier than 2019-08-03 05:00:00\n",
-      " no later than   2019-08-03 07:00:00\n",
-      "\n",
-      "4 ArchiveEntries matched.\n",
-      "Downloading 1 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030508-259579-19807.mp3\n",
-      "\tto ./testing/mp3_downloads/19807-20190803-0638.mp3\n",
-      "Downloading 2 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030438-629593-19807.mp3\n",
-      "\tto ./testing/mp3_downloads/19807-20190803-0608.mp3\n",
-      "Downloading 3 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030408-699690-19807.mp3\n",
-      "\tto ./testing/mp3_downloads/19807-20190803-0538.mp3\n",
-      "Downloading 4 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/19807/20190803/201908030338-869097-19807.mp3\n",
-      "\tto ./testing/mp3_downloads/19807-20190803-0508.mp3\n",
-      "\n",
-      "Downloads complete.\n",
-      "\n",
-      "Retrieved 4 files in 22.5865 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "archive.download(start=datetime(2019,8,3,5,0), end=datetime(2019,8,3,7,0))"
    ]
