v1 updates - Add feed_name property to BrArch class - Add throttle to ArchNav class

--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,9 +33,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BroadcastifyArchive\n",
+       " (0 ArchiveEntries\n",
+       "  start date: None\n",
+       "  end date:   None\n",
+       "  feed_id = 19807\n",
+       "  feed_name = Lackawanna County Fire, Rescue, and EMS\n",
+       "  username = \"cwchiu\", pwd = [True]\n",
+       "  feed_url = \"https://www.broadcastify.com/listen/feed/19807\"\n",
+       "  archive_url = \"https://www.broadcastify.com/archives/feed/19807\"\n",
+       "  verbose = True)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "archive"
    ]
@@ -55,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive.build(0)"
+    "archive.build(10)"
    ]
   },
   {
