Minor updates to demo notebook.

--- a/bart_demo.ipynb
+++ b/bart_demo.ipynb
@@ -28,9 +28,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Set your username & password\n",
-    "USERNAME = \n",
-    "PASSWORD ="
+    "## Specify (1) a path to your pwd.ini file and (2) a username and password in the pwd.ini file.\n",
+    "\n",
+    "## OR\n",
+    "\n",
+    "## Enter a username & password for a valid Broadcastify premium account below\n",
+    "\n",
+    "USERNAME = None\n",
+    "PASSWORD = None"
    ]
   },
   {
