Split archv bld from .mp3 path bld (+speed)

--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -18,8 +18,8 @@
    "source": [
     "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
     "# TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
-    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
-    "TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA"
+    "TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
+    "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA"
    ]
   },
   {
@@ -34,24 +34,43 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "# # Import pickle\n",
+    "\n",
+    "# import pickle\n",
+    "# with open('testing/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
+    "#     sample_archive_entries = pickle.load(pickle_in)\n",
+    "    \n",
+    "# archive.entries = sample_archive_entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "BroadcastifyArchive\n",
-       " (0 ArchiveEntries\n",
+       " (0 entries\n",
+       "  feed_id = 18812\n",
+       "  feed_name = Atlanta Police Zone 5 and Fire Dispatch\n",
        "  start date: None\n",
        "  end date:   None\n",
-       "  feed_id = 19807\n",
-       "  feed_name = Lackawanna County Fire, Rescue, and EMS\n",
        "  username = \"cwchiu\", pwd = [True]\n",
-       "  feed_url = \"https://www.broadcastify.com/listen/feed/19807\"\n",
-       "  archive_url = \"https://www.broadcastify.com/archives/feed/19807\"\n",
+       "  feed_url = \"https://www.broadcastify.com/listen/feed/18812\"\n",
+       "  archive_url = \"https://www.broadcastify.com/archives/feed/18812\"\n",
        "  verbose = True)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,95 +81,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive.show_browser_ui = True"
+    "# archive.show_browser_ui = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Closing browser...\n",
+      "Archive build complete.\n",
+      "BroadcastifyArchive\n",
+      " (251 entries\n",
+      "  feed_id = 18812\n",
+      "  feed_name = Atlanta Police Zone 5 and Fire Dispatch\n",
+      "  start date: 2019-10-19 00:11:00\n",
+      "  end date:   2019-10-24 14:04:00\n",
+      "  username = \"cwchiu\", pwd = [True]\n",
+      "  feed_url = \"https://www.broadcastify.com/listen/feed/18812\"\n",
+      "  archive_url = \"https://www.broadcastify.com/archives/feed/18812\"\n",
+      "  verbose = True)\n"
+     ]
+    }
+   ],
    "source": [
-    "archive.build(10)"
+    "archive.build(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "archive.download(start=datetime(2019,8,3,5,0), end=datetime(2019,8,3,7,0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving list of ArchiveEntries...\n",
+      " no earlier than 2019-10-19 20:00:00\n",
+      " no later than   2019-10-19 22:00:00\n",
+      "\n",
+      "4 ArchiveEntries matched.\n",
+      "Downloading 1 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910202004-174873-18812.mp3\n",
+      "\tto ./testing/mp3_downloads/18812-20191019-2134.mp3\n",
+      "Downloading 2 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910201934-625668-18812.mp3\n",
+      "\tto ./testing/mp3_downloads/18812-20191019-2104.mp3\n",
+      "Downloading 3 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910201904-900477-18812.mp3\n",
+      "\tto ./testing/mp3_downloads/18812-20191019-2034.mp3\n",
+      "Downloading 4 of 4\n",
+      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910201834-69249-18812.mp3\n",
+      "\tto ./testing/mp3_downloads/18812-20191019-2004.mp3\n",
+      "\n",
+      "Downloads complete.\n",
+      "\n",
+      "Retrieved 4 files in 18.8171 seconds.\n"
+     ]
+    }
+   ],
    "source": [
-    "# # Import pickle\n",
-    "\n",
-    "# import pickle\n",
-    "# with open('../data/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
-    "#     sample_archive_entries = pickle.load(pickle_in)\n",
-    "    \n",
-    "# archive.entries = sample_archive_entries"
+    "archive.download(start=datetime(2019,10,19,20,0), end=datetime(2019,10,19,22,0))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
     "# # Export pickle\n",
-    "\n",
+    "# #\n",
     "# import pickle\n",
     "\n",
     "# sample_archive_entries = archive.entries\n",
     "\n",
-    "# with open('../data/sample_archive_entries.pkl','wb') as pickle_out:\n",
+    "# with open('testing/sample_archive_entries.pkl','wb') as pickle_out:\n",
     "#     pickle.dump(sample_archive_entries, pickle_out)"
    ]
   },
