--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive = bart_v1.BroadcastifyArchive(TEST_FEED_ID)"
+    "archive = bart_v1.BroadcastifyArchive(TEST_FEED_ID, show_browser_ui=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "code_folding": []
    },
@@ -50,109 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BroadcastifyArchive\n",
-       " (0 entries\n",
-       "  feed_id = 18812\n",
-       "  feed_name = Atlanta Police Zone 5 and Fire Dispatch\n",
-       "  start date: None\n",
-       "  end date:   None\n",
-       "  username = \"cwchiu\", pwd = [True]\n",
-       "  feed_url = \"https://www.broadcastify.com/listen/feed/18812\"\n",
-       "  archive_url = \"https://www.broadcastify.com/archives/feed/18812\"\n",
-       "  verbose = True)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "archive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# archive.show_browser_ui = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Closing browser...\n",
-      "Archive build complete.\n",
-      "BroadcastifyArchive\n",
-      " (251 entries\n",
-      "  feed_id = 18812\n",
-      "  feed_name = Atlanta Police Zone 5 and Fire Dispatch\n",
-      "  start date: 2019-10-19 00:11:00\n",
-      "  end date:   2019-10-24 14:04:00\n",
-      "  username = \"cwchiu\", pwd = [True]\n",
-      "  feed_url = \"https://www.broadcastify.com/listen/feed/18812\"\n",
-      "  archive_url = \"https://www.broadcastify.com/archives/feed/18812\"\n",
-      "  verbose = True)\n"
-     ]
-    }
-   ],
-   "source": [
-    "archive.build(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Retrieving list of ArchiveEntries...\n",
-      " no earlier than 2019-10-19 20:00:00\n",
-      " no later than   2019-10-19 22:00:00\n",
-      "\n",
-      "4 ArchiveEntries matched.\n",
-      "Downloading 1 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910202004-174873-18812.mp3\n",
-      "\tto ./testing/mp3_downloads/18812-20191019-2134.mp3\n",
-      "Downloading 2 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910201934-625668-18812.mp3\n",
-      "\tto ./testing/mp3_downloads/18812-20191019-2104.mp3\n",
-      "Downloading 3 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910201904-900477-18812.mp3\n",
-      "\tto ./testing/mp3_downloads/18812-20191019-2034.mp3\n",
-      "Downloading 4 of 4\n",
-      "\tfrom https://garchives1.broadcastify.com/18812/20191020/201910201834-69249-18812.mp3\n",
-      "\tto ./testing/mp3_downloads/18812-20191019-2004.mp3\n",
-      "\n",
-      "Downloads complete.\n",
-      "\n",
-      "Retrieved 4 files in 18.8171 seconds.\n"
-     ]
-    }
-   ],
-   "source": [
-    "archive.download(start=datetime(2019,10,19,20,0), end=datetime(2019,10,19,22,0))"
+    "archive.build(start=datetime(2019,10,1), end=datetime(2019,10,15), rebuild=True)"
    ]
   },
   {
@@ -160,28 +64,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# archive.download(start=datetime(2019,10,27,20,0), end=datetime(2019,10,27,22,0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "archive.entries"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "----"
+   ]
   },
   {
    "cell_type": "code",
