--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -2,70 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import bart_v1\n",
-    "from datetime import datetime"
+    "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
-    "# TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
-    "TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
+    "TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
+    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
     "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing archive navigation...\n",
+      "\tOpening browser...\n",
+      "\tLoading navigation page...\n",
+      "\tLooking for archive start date...\n",
+      "\tFound start date at 2019-01-28.\n",
+      "Initialization complete.\n",
+      "\n",
+      "BroadcastifyArchive\n",
+      " (Feed ID = 14439\n",
+      "  Feed Name = Travis County Law Enforcement\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
+      "  Start Date: 2019-01-28\n",
+      "  End Date:   2019-10-31\n",
+      "  Username = \"cwchiu\" Password = [True]\n",
+      "  0 parsed archive entries between None and None\n",
+      "  Verbose = True)\n"
+     ]
+    }
+   ],
    "source": [
-    "archive = bart_v1.BroadcastifyArchive(TEST_FEED_ID, show_browser_ui=True)"
+    "archive = bart_v1.BroadcastifyArchive(TEST_FEED_ID, show_browser_ui=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# # Import pickle\n",
-    "\n",
-    "# import pickle\n",
-    "# with open('testing/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
-    "#     sample_archive_entries = pickle.load(pickle_in)\n",
-    "    \n",
-    "# archive.entries = sample_archive_entries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive build complete.\n",
+      "\n",
+      "BroadcastifyArchive\n",
+      " (Feed ID = 14439\n",
+      "  Feed Name = Travis County Law Enforcement\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
+      "  Start Date: 2019-01-28\n",
+      "  End Date:   2019-10-31\n",
+      "  Username = \"cwchiu\" Password = [True]\n",
+      "  13238 parsed archive entries between 2019-01-28 and 2019-10-31\n",
+      "  Verbose = True)\n"
+     ]
+    }
+   ],
    "source": [
-    "archive.build(start=datetime(2019,10,1), end=datetime(2019,10,15), rebuild=True)"
+    "archive.build()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "2 archive entries matched.\n",
+      "Downloading 1 of 2\n",
+      "\tfrom https://garchives1.broadcastify.com/14439/20191027/201910272128-229346-14439.mp3\n",
+      "\tto ./testing/mp3_downloads/14439-20191027-2135.mp3\n",
+      "Downloading 2 of 2\n",
+      "\tfrom https://garchives1.broadcastify.com/14439/20191027/201910272028-597067-14439.mp3\n",
+      "\tto ./testing/mp3_downloads/14439-20191027-2058.mp3\n",
+      "\n",
+      "Downloads complete.\n",
+      "\n",
+      "Retrieved 2 files in 10.1703 seconds.\n"
+     ]
+    }
+   ],
    "source": [
-    "# archive.download(start=datetime(2019,10,27,20,0), end=datetime(2019,10,27,22,0))"
+    "archive.download(start=dt.datetime(2019,10,27,20,0), end=dt.datetime(2019,10,27,22,0))"
    ]
   },
   {
@@ -93,7 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "# # Import pickle\n",
+    "\n",
+    "# import pickle\n",
+    "# with open('testing/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
+    "#     sample_archive_entries = pickle.load(pickle_in)\n",
+    "    \n",
+    "# archive.entries = sample_archive_entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "code_folding": []
    },
