Update demos for v0.6

--- a/v1.0/bart_v1_tester.ipynb
+++ b/v1.0/bart_v1_tester.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -99,13 +99,15 @@
       "Downloading 1 of 2\n",
       "\tfrom https://garchives1.broadcastify.com/14439/20191027/201910272128-229346-14439.mp3\n",
       "\tto ./testing/mp3_downloads/14439-20191027-2135.mp3\n",
+      "\tFile already exists. Skipping.\n",
       "Downloading 2 of 2\n",
       "\tfrom https://garchives1.broadcastify.com/14439/20191027/201910272028-597067-14439.mp3\n",
       "\tto ./testing/mp3_downloads/14439-20191027-2058.mp3\n",
+      "\tFile already exists. Skipping.\n",
       "\n",
       "Downloads complete.\n",
       "\n",
-      "Retrieved 2 files in 10.1703 seconds.\n"
+      "Retrieved 2 files in 0.61 seconds.\n"
      ]
     }
    ],
