--- a/bart_demo.ipynb
+++ b/bart_demo.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import bart\n",
-    "from datetime import datetime"
+    "import datetime as dt"
    ]
   },
   {
@@ -17,9 +17,9 @@
    "outputs": [],
    "source": [
     "## Choose a feed to test, and uncomment it.\n",
-    "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
-    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA -- home precinct\n",
-    "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA -- GREAT SCOTT!"
+    "# TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
+    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
+    "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA"
    ]
   },
   {
@@ -54,8 +54,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print object representation\n",
-    "archive"
+    "# Build the archive for 3-10 days ago\n",
+    "start_date = (dt.datetime.now() - dt.timedelta(days=10)).date()\n",
+    "end_date = (dt.datetime.now() - dt.timedelta(days=3)).date()\n",
+    "\n",
+    "archive.build(start=start_date, end=end_date)"
    ]
   },
   {
@@ -64,19 +67,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Build an archive going back 1 day\n",
-    "archive.build(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Download the mp3s for 10p-2a\n",
-    "# Substitute in your dates with a datetime object: datetime(YYYY,M,D,H,M) (hour in 24-hr format)\n",
-    "archive.download(start=datetime(2019,10,23,22,0), end=datetime(2019,10,24,2,0))"
+    "# Download the mp3s for 10p-2a starting on the second-to-last day of the archive \n",
+    "start_time = dt.datetime.combine(end_date - dt.timedelta(days=1), dt.datetime(1,1,1,22,0).time())\n",
+    "end_time = dt.datetime.combine(end_date, dt.datetime(1,1,1,2,0).time())\n",
+    "\n",
+    "# Add a valid path on your computer to store the MP3 files\n",
+    "# Start and end the path with slash (/)\n",
+    "archive.download(start=start_time, end=end_time, output_path='/ ADD PATH HERE /')"
    ]
   },
   {
@@ -86,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Change the feed_id\n",
-    "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
+    "# TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
     "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA -- home precinct\n",
     "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA -- GREAT SCOTT!\n",
     "archive.feed_id = \n",
