major object model updates for v1

--- a/bart_tester.ipynb
+++ b/bart_tester.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bart_v1\n",
+    "import bart\n",
     "import datetime as dt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,18 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing archive navigation...\n",
-      "\tOpening browser...\n",
-      "\tLoading navigation page...\n",
-      "\tLooking for archive start date...\n",
-      "\tFound start date at 2019-01-28.\n",
+      "Initializing calendar navigation...\n",
       "Initialization complete.\n",
       "\n",
       "BroadcastifyArchive\n",
@@ -44,28 +40,36 @@
       "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
       "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
       "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-10-31\n",
+      "  End Date:   2019-11-02\n",
       "  Username = \"cwchiu\" Password = [True]\n",
-      "  0 parsed archive entries between None and None\n",
+      "  0 parsed archive entries \n",
       "  Verbose = True)\n"
      ]
     }
    ],
    "source": [
-    "archive = bart_v1.BroadcastifyArchive(TEST_FEED_ID, show_browser_ui=False)"
+    "archive = bart.BroadcastifyArchive(TEST_FEED_ID, show_browser_ui=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Parsing archive entry for 2019-02-05 (1 of 7)\n",
+      "Parsing archive entry for 2019-02-04 (2 of 7)\n",
+      "Parsing archive entry for 2019-02-03 (3 of 7)\n",
+      "Parsing archive entry for 2019-02-02 (4 of 7)\n",
+      "Parsing archive entry for 2019-02-01 (5 of 7)\n",
+      "Parsing archive entry for 2019-01-31 (6 of 7)\n",
+      "Parsing archive entry for 2019-01-30 (7 of 7)\n",
+      "Processing archive entries...\n",
       "Archive build complete.\n",
       "\n",
       "BroadcastifyArchive\n",
@@ -74,45 +78,40 @@
       "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
       "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
       "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-10-31\n",
+      "  End Date:   2019-11-02\n",
       "  Username = \"cwchiu\" Password = [True]\n",
-      "  13238 parsed archive entries between 2019-01-28 and 2019-10-31\n",
+      "  310 parsed archive entries between 2019-01-30 and 2019-02-05\n",
       "  Verbose = True)\n"
      ]
     }
    ],
    "source": [
-    "archive.build()"
+    "archive.build(start=dt.datetime(2019,1,30).date(), end=dt.datetime(2019,2,5).date(), rebuild=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "2 archive entries matched.\n",
-      "Downloading 1 of 2\n",
-      "\tfrom https://garchives1.broadcastify.com/14439/20191027/201910272128-229346-14439.mp3\n",
-      "\tto ./testing/mp3_downloads/14439-20191027-2135.mp3\n",
-      "\tFile already exists. Skipping.\n",
-      "Downloading 2 of 2\n",
-      "\tfrom https://garchives1.broadcastify.com/14439/20191027/201910272028-597067-14439.mp3\n",
-      "\tto ./testing/mp3_downloads/14439-20191027-2058.mp3\n",
-      "\tFile already exists. Skipping.\n",
-      "\n",
-      "Downloads complete.\n",
-      "\n",
-      "Retrieved 2 files in 0.61 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "archive.download(start=dt.datetime(2019,10,27,20,0), end=dt.datetime(2019,10,27,22,0))"
+    "archive.entries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archive.download(start=dt.datetime(2019,1,31,20,0), end=dt.datetime(2019,2,1,2,0))"
    ]
   },
   {
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "code_folding": []
    },
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "code_folding": []
    },
