Added tqdm; update NavExcepn's; bug fixes.

--- a/bart_tester.ipynb
+++ b/bart_tester.ipynb
@@ -12,81 +12,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEST_FEED_ID = '763' # \"This is Sgt. Peterson, Chicago Police\" (top listened-to feed!)\n",
-    "TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
-    "# TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA\n",
-    "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA"
+    "# TEST_FEED_ID = '14439' # Travis County, Austin, TX\n",
+    "TEST_FEED_ID = '18812' # Fulton County, Atlanta, GA (dates in March 2019 have no entries)\n",
+    "# TEST_FEED_ID = '19807' # Lackawanna County, Scranton, PA (archive is no longer available)\n",
+    "# TEST_FEED_ID = '198' # Invalid Feed ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initializing calendar navigation...\n",
+      "Initializing calendar navigation for Atlanta Police Zone 5 and Fire Dispatch...\n",
       "Initialization complete.\n",
       "\n",
       "BroadcastifyArchive\n",
-      " (Feed ID = 14439\n",
-      "  Feed Name = Travis County Law Enforcement\n",
-      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
-      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
+      " (Feed ID = 18812\n",
+      "  Feed Name = Atlanta Police Zone 5 and Fire Dispatch\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/18812\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/18812\"\n",
       "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-11-02\n",
-      "  Username = \"cwchiu\" Password = [True]\n",
-      "  0 parsed archive entries \n",
+      "  End Date:   2019-11-04\n",
+      "  Username = \"None\" Password = [False]\n",
+      "  0 built archive entries \n",
       "  Verbose = True)\n"
      ]
     }
    ],
    "source": [
-    "archive = bart.BroadcastifyArchive(TEST_FEED_ID, show_browser_ui=False)"
+    "archive = bart.BroadcastifyArchive(TEST_FEED_ID)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6b15e0c97a1542e8a5cb891e33443587",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, description='Building dates', max=7, style=ProgressStyle(description_width…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsing archive entry for 2019-02-05 (1 of 7)\n",
-      "Parsing archive entry for 2019-02-04 (2 of 7)\n",
-      "Parsing archive entry for 2019-02-03 (3 of 7)\n",
-      "Parsing archive entry for 2019-02-02 (4 of 7)\n",
-      "Parsing archive entry for 2019-02-01 (5 of 7)\n",
-      "Parsing archive entry for 2019-01-31 (6 of 7)\n",
-      "Parsing archive entry for 2019-01-30 (7 of 7)\n",
-      "Processing archive entries...\n",
-      "Archive build complete.\n",
       "\n",
-      "BroadcastifyArchive\n",
-      " (Feed ID = 14439\n",
-      "  Feed Name = Travis County Law Enforcement\n",
-      "  Feed URL = \"https://www.broadcastify.com/listen/feed/14439\"\n",
-      "  Archive URL = \"https://www.broadcastify.com/archives/feed/14439\"\n",
+      "\n",
+      " BroadcastifyArchive\n",
+      " (Feed ID = 18812\n",
+      "  Feed Name = Atlanta Police Zone 5 and Fire Dispatch\n",
+      "  Feed URL = \"https://www.broadcastify.com/listen/feed/18812\"\n",
+      "  Archive URL = \"https://www.broadcastify.com/archives/feed/18812\"\n",
       "  Start Date: 2019-01-28\n",
-      "  End Date:   2019-11-02\n",
+      "  End Date:   2019-11-04\n",
       "  Username = \"cwchiu\" Password = [True]\n",
-      "  310 parsed archive entries between 2019-01-30 and 2019-02-05\n",
+      "  120 built archive entries between 2019-03-17 and 2019-03-23\n",
       "  Verbose = True)\n"
      ]
     }
    ],
    "source": [
-    "archive.build(start=dt.datetime(2019,1,30).date(), end=dt.datetime(2019,2,5).date(), rebuild=True)"
+    "archive.build(start=dt.datetime(2019, 3, 17).date(), end=dt.datetime(2019, 3, 23).date(), rebuild=True)"
    ]
   },
   {
@@ -95,23 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive.entries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "----"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "archive.download(start=dt.datetime(2019,1,31,20,0), end=dt.datetime(2019,2,1,2,0))"
+    "archive.download(start=dt.datetime(2019,10,31,20,0), end=dt.datetime(2019,11,1,2,0))"
    ]
   },
   {
@@ -127,7 +117,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "archive.entries"
+    "archive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archive.feed_id = TEST_FEED_ID = '18812'"
    ]
   },
   {
@@ -135,23 +134,6 @@
    "metadata": {},
    "source": [
     "----"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# # Import pickle\n",
-    "\n",
-    "# import pickle\n",
-    "# with open('testing/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
-    "#     sample_archive_entries = pickle.load(pickle_in)\n",
-    "    \n",
-    "# archive.entries = sample_archive_entries"
    ]
   },
   {
@@ -170,6 +152,25 @@
     "\n",
     "# with open('testing/sample_archive_entries.pkl','wb') as pickle_out:\n",
     "#     pickle.dump(sample_archive_entries, pickle_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "code_folding": []
+   },
+   "outputs": [],
+   "source": [
+    "# # Import pickle\n",
+    "\n",
+    "# import pickle\n",
+    "# with open('testing/sample_archive_entries.pkl', 'rb') as pickle_in:\n",
+    "#     sample_archive_entries = pickle.load(pickle_in)\n",
+    "    \n",
+    "# archive.entries = sample_archive_entries\n",
+    "# archive.earliest_entry = min([entry['start_time'] for entry in archive.entries])\n",
+    "# archive.latest_entry = max([entry['start_time'] for entry in archive.entries])"
    ]
   },
   {
